--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "astro": "^4.13.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.2.1",
     "react-type-animation": "^3.2.0",
     "tailwindcss": "^3.4.7",
     "typescript": "^5.5.4"
