--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react-icons": "^5.2.1",
     "react-type-animation": "^3.2.0",
     "tailwindcss": "^3.4.7",
-    "typescript": "^5.5.4"
+    "typescript": "^5.5.4",
+    "vite": "^5.3.5"
   },
   "devDependencies": {
     "prettier": "^3.3.3",
