--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "@astrojs/check": "^0.9.1",
     "@astrojs/react": "^3.6.1",
     "@astrojs/tailwind": "^5.1.0",
+    "@gsap/react": "^2.1.1",
     "@nanostores/react": "^0.7.3",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "astro": "^4.13.1",
+    "gsap": "^3.12.5",
     "nanostores": "^0.11.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
