--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/react-dom": "^18.3.0",
     "astro": "^4.13.1",
     "gsap": "^3.12.5",
+    "hamburger-react": "^2.5.1",
     "nanostores": "^0.11.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
