--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "astro": "^4.13.1",
+    "dompurify": "^3.1.6",
     "gsap": "^3.12.5",
     "hamburger-react": "^2.5.1",
     "nanostores": "^0.11.2",
@@ -26,7 +27,8 @@
     "react-icons": "^5.2.1",
     "react-type-animation": "^3.2.0",
     "tailwindcss": "^3.4.7",
-    "typescript": "^5.5.4"
+    "typescript": "^5.5.4",
+    "zero-md": "^3.1.2"
   },
   "devDependencies": {
     "prettier": "^3.3.3",
