--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
+    "react-router-dom": "^6.26.1",
     "react-type-animation": "^3.2.0",
     "tailwindcss": "^3.4.7",
     "typescript": "^5.5.4",
