--- a/package.json
+++ b/package.json
@@ -23,9 +23,11 @@
     "hamburger-react": "^2.5.1",
     "nanostores": "^0.11.2",
     "react": "^18.3.1",
+    "react-code-blocks": "^0.1.6",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
     "react-router-dom": "^6.26.1",
+    "react-syntax-highlighter": "^15.5.0",
     "react-type-animation": "^3.2.0",
     "tailwindcss": "^3.4.7",
     "typescript": "^5.5.4",
